Fixed communication between microservices